--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="#link1">Главная</a></li>
                     <li><a href="#link2">О нас</a></li>
-                    <li><a href="#link3">Контакты</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
                     <li><a href="#link4">Поддержка</a></li>
                 </ul>
             </nav>
